@startuml

title __ALARMCLOCK's Class Diagram__\n

  namespace com.sleepestapp.sleepest {
    namespace alarmclock {
      class com.sleepestapp.sleepest.alarmclock.AlarmClockAudio {
          {static} ~ audioManager : AudioManager
          {static} ~ mediaPlayer : MediaPlayer
          {static} ~ ringtoneManager : Ringtone
          {static} ~ vibrator : Vibrator
          {static} - alarmClockAudioInstance : AlarmClockAudio
          - appContext : Context
          - audioVolume : int
          - countDownTimer : CountDownTimer
          - ringerMode : int
          {static} + getInstance()
          {static} + getInstanceContext()
          + init()
          + startAlarm()
          + stopAlarm()
          {static} - getAudioManager()
          - getContext()
          {static} - getMediaPlayer()
          {static} - getRingtoneManager()
          {static} - getVibrator()
          - startRingtoneWithPermission()
          - startRingtoneWithPermissionAndVibrate()
          - startRingtoneWithoutPermission()
          - startVibration()
      }
    }
  }
  

  namespace com.sleepestapp.sleepest {
    namespace alarmclock {
      class com.sleepestapp.sleepest.alarmclock.AlarmClockReceiver {
          {static} - context : Context
          {static} + cancelAlarm()
          {static} + cancelNotification()
          {static} + isAlarmClockActive()
          + onReceive()
          {static} + restartAlarmManager()
          {static} + startAlarmManager()
          - createNotificationChannel()
          - showFullscreenNotification()
          - showNotificationOnLockScreen()
      }
    }
  }
  

  namespace com.sleepestapp.sleepest {
    namespace alarmclock {
      class com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity {
          - btnSnoozeAlarmLockScreen : Button
          - countDownTimer : CountDownTimer
          - isStarted : boolean
          - ivSwipeUpArrow : ImageView
          - tvSwipeUp : TextView
          # onCreate()
          # onDestroy()
          # onResume()
          - fadeColor()
          - moveView()
      }
    }
  }
  

  namespace com.sleepestapp.sleepest {
    namespace alarmclock {
      class com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity.SwipeListener {
          ~ gestureDetector : GestureDetector
          + onTouch()
          ~ SwipeListener()
      }
    }
  }
  

  com.sleepestapp.sleepest.alarmclock.AlarmClockAudio o-- com.sleepestapp.sleepest.storage.DataStoreRepository : dataStoreRepository
  com.sleepestapp.sleepest.alarmclock.AlarmClockReceiver -up-|> android.content.BroadcastReceiver
  com.sleepestapp.sleepest.alarmclock.AlarmClockReceiver o-- com.sleepestapp.sleepest.storage.DataStoreRepository : dataStoreRepository
  com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity o-- com.sleepestapp.sleepest.storage.DataStoreRepository : dataStoreRepository
  com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity o-- com.sleepestapp.sleepest.storage.DatabaseRepository : databaseRepository
  com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity o-- com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity.SwipeListener : swipeListener
  com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity +-down- com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity.SwipeListener
  com.sleepestapp.sleepest.alarmclock.LockScreenAlarmActivity.SwipeListener .up.|> android.view.View.OnTouchListener


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
